force-app/main/default/objects/Expansion_Policy__mdt/Expansion_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Expansion Policy</label>
    <pluralLabel>Expansion Policies</pluralLabel>
</CustomObject>