force-app/main/default/objects/Expansion_Policy__mdt/fields/Expansion_Type__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Type__c</fullName>
    <label>Expansion Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>