force-app/main/default/objects/Expansion_Policy__mdt/fields/Minor_Expansion_Threshold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minor_Expansion_Threshold_Percentage__c</fullName>
    <description
  >The ceiling below which an expansion may stay Minor-Approved with no new Deal (doc Sprint 42 section 42.35/42.38).</description>
    <label>Minor Expansion Threshold Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>