force-app/main/default/objects/Expansion_Policy__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>