force-app/main/default/objects/Expansion_Policy__mdt/fields/Requires_New_Deal__c.field-meta.xml
<CustomField>
    <fullName>Requires_New_Deal__c</fullName>
    <description
  >Org-level default when no more specific policy row matches - defaults to true so an unmatched expansion is conservatively routed through the full Deal pipeline rather than silently staying minor.</description>
    <defaultValue>true</defaultValue>
    <label>Requires New Deal</label>
    <type>Checkbox</type>
</CustomField>